this is my final commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty Salon</title>
     <link rel="stylesheet" href="./css/universal.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <main>
         <header>
@@ -23,6 +26,372 @@
                 </nav>
             </div>
         </header>
+
+        <section class="landing_page">
+            <div class="landing_content">
+                <div class="content">
+                    <div class="flex_container">
+                        <div class="landing_header">
+                            <h1>BEAUTY TREATMENTS</h1>
+                        </div>
+
+                        <div class="landing_body">
+                            <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                                sagittis suscipit ultricesSample text. Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit nullam nunc justo
+                                sagittis suscipit ultrices. Images from <a href="https://www.google.com"
+                                    class="link">FreePik</a>
+                            </p>
+                        </div>
+
+                        <div class="button">
+                            <button type="button">LEARN MORE</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="about_page">
+            <div class="about_content">
+
+                <div class="flex_container">
+                    <div class="about_header">
+                        <h1>About Our Beauty Salon</h1>
+                    </div>
+
+                    <div class="about_body">
+                        <p>Sample text. Click to select the Text Element. Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                            fugiat nulla pariatur.
+                        </p>
+                    </div>
+
+                    <div class="about_button">
+                        <button class="button_about">LEARN MORE</button>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+        <section class="services_page">
+            <div class="services_content">
+                <div class="holder">
+                    <div class="service_container">
+                        <div class="service_header">
+                            <h1>Our Services</h1>
+                        </div>
+                        <div class="service_body">
+                            <p>Consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                        </div>
+
+                    </div>
+
+                    <div class="box_container">
+                        <div class="box1">
+                            <div class="svg_box">
+                                <div class="svg_holder8"></div>
+                            </div>
+
+                            <div class="face">
+                                <h1>FACE</h1>
+                            </div>
+
+                            <div class="face_text">
+                                Chemical Peels, Microneedling, Microderbabrasion & Traditional Facials suscipit
+                                ultrices.
+                            </div>
+
+                            <div class="find_out">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+
+
+                        <div class="box2">
+                            <div class="svg_box1">
+                                <div class="svg_holder1"></div>
+                            </div>
+
+                            <div class="face1">
+                                <h1>BODY</h1>
+                            </div>
+
+                            <div class="face_text1">
+                                Massage, Microdermabrassion, Exfoliation, Microneedling & Hot Stone Therapy suscipit
+                                ultrices.
+                            </div>
+
+                            <div class="find_out1">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+
+                        <div class="box3">
+                            <div class="svg_box2">
+                                <div class="svg_holder2"></div>
+                            </div>
+
+                            <div class="face2">
+                                <h1>NAILS</h1>
+                            </div>
+
+                            <div class="face_text2">
+                                Professional nail care treatments and products. Shellac and footlogic elit nullam nunc
+                                justo sagittis.
+                            </div>
+
+                            <div class="find_out2">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="box_container1">
+                        <div class="box1">
+                            <div class="svg_box">
+                                <div class="svg_holder"></div>
+                            </div>
+
+                            <div class="waxing">
+                                <h1>WAXING</h1>
+                            </div>
+
+                            <div class="face_text">
+                                Waxing including Hollywood's & Brazilians. Adipiscing elit nullam nunc justo sagittis
+                                suscipit ultrices.
+                            </div>
+
+                            <div class="find_out">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+
+                        <div class="box2">
+                            <div class="svg_box1">
+                                <div class="svg_holder3"></div>
+                            </div>
+
+                            <div class="eyes">
+                                <h1>EYES</h1>
+                            </div>
+
+                            <div class="face_text1">
+                                Treatments by the original eyelash extension expertsnullam nunc justo sagittis suscipit
+                                ultrices.
+                            </div>
+
+                            <div class="find_out1">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+
+                        <div class="box3">
+                            <div class="svg_box2">
+                                <div class="svg_holder4"></div>
+                            </div>
+
+                            <div class="tanning">
+                                <h1>TANNING</h1>
+                            </div>
+
+                            <div class="face_text2">
+                                Natural, vegan and cruelty-free tanning, consectetur adipiscing elit nullam nunc justo
+                                sagittis.
+                            </div>
+
+                            <div class="find_out2">
+                                <a href="https://google.com">FIND OUT MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="book_page">
+            <div class="background">
+                <div class="overlay">
+                    <div class="book_container">
+                        <div class="book_header">
+                            <h1>What Makes Our Salon Unique?</h1>
+                        </div>
+
+                        <div class="body_flex">
+                            <div class="book_body">
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                                    ea
+                                    commodo consequat. Duis aute irure dolor in reprehenderit</p>
+                            </div>
+                        </div>
+
+                        <div class="button_flex">
+                            <div class="book_button">
+                                <button class="button_book">ALL TREATMENTS</button>
+                            </div>
+
+                            <div class="book_button1">
+                                <button class="button_book1">BOOK NOW</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="pdf_page">
+            <div class="pdf_container">
+
+                <div class="backdrop">
+
+                    <div class="pdf_flex">
+                        <div class="pdf_header">
+                            <h1>You can view a PDF of our full treatment menu here</h1>
+                        </div>
+
+                        <div class="pdf_button">
+                            <button class="button_pdf">DOWNLOAD</button>
+                        </div>
+
+                        <div class="flex_images">
+                            <div class="flex_image1"></div>
+                            <div class="flex_image2"></div>
+                            <div class="flex_image3"></div>
+                            <div class="flex_image4"></div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="red"></div>
+                <div class="blue">
+                    <div class="freepik">
+                        <p>Images from <a href="https://google.com" class="ref">FreePik</a> </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="beauty_page">
+            <div class="beauty_content">
+                <div class="beauty_flex">
+                    <div class="beauty_header">
+                        <h1>Ready for the best beauty tips?</h1>
+                    </div>
+
+                    <div class="beauty_body">
+                        <p>Subscribe to our newsletter to receive inspiration and advice!</p>
+                    </div>
+
+                    <div class="input_flex">
+                        <div class="name">
+                            <input type="text" name="name" id="" placeholder="Name">
+                        </div>
+
+                        <div class="email">
+                            <input type="email" name="email" id="" placeholder="Enter a valid email address">
+                        </div>
+                    </div>
+
+                    <div class="beauty_button">
+                        <button class="button_beauty">SUBSCRIBE NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="what_we_do_page">
+            <div class="what_content">
+                <div class="what_flex">
+                    <div class="left_container">
+                        <div class="left_width"></div>
+                        <div class="left_text_box">
+                            <div class="left_header">
+                                <h1>What We Do</h1>
+                            </div>
+                            <div class="left_body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right_container">
+                        <div class="right_height">
+                            <div class="right_flex">
+                                <div class="left_right"></div>
+                                <div class="right_right"></div>
+                            </div>
+
+                            <div class="right_bottom">
+                                <div class="right_bottom_width"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="third-part">
+            <div class="flex-container">
+                <div class="image-text-holder">
+                    <h2>LOCATION</h2>
+                    <p>28 Jackson Blvd Ste 1020 Chicago
+                        <br>IL 60604-2340
+                    </p>
+                    <h2>FOLLOW US</h2>
+                    <p>©2021 Privacy policy</p>
+                </div>
+                <div class="flex">
+                    <div class="container">
+                        <div class="contain">
+
+                        </div>
+                        <div class="contains">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="fourth">
+            <div class="text-format">
+                <div class="display-container">
+                    <div class="display">
+                        <div class="text-area">
+                            <h6>Headline</h6>
+                            <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                                sagittis suscipit ultrices.</p>
+                        </div>
+
+                    </div>
+                    <div class="display">
+                        <div class="text-area">
+                            <h6>Headline</h6>
+                            <p>Sample footer text</p>
+                        </div>
+                    </div>
+                    <div class="display">
+                        <div class="text-area">
+                            <h6>Headline</h6>
+                            <p>Sample footer text</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
 </body>
+
 </html>
