Done and Dusted

--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,7 @@
     </section>
     <section class="second-part">
          <h2>About Our Beauty Salon</h2>
-         <p>We are always happy to hear from clients and there are a number of ways you can reach out to <br> us and start a conversation. Perhaps you need someone to explain the details of individual <br>treatments in more detail? Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+         <p>We are always happy to hear from clients and there are a number of ways you can reach out to  us and start a conversation. Perhaps you need someone to explain the details of individual treatments in more detail? Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <div class="text-part">
             <h5>Hours</h5>
             <p>Monday - Saturday</p>
@@ -53,8 +53,12 @@
     </section>
     <section class="third-part">
         <div class="flex-container">
-            <div class="flexs">
-
+            <div class="image-text-holder">
+                    <h2>LOCATION</h2>
+                    <p>28 Jackson Blvd Ste 1020 Chicago
+                    <br>IL 60604-2340</p>
+                    <h2>FOLLOW US</h2>
+                    <p>©2021 Privacy policy</p>
             </div>
             <div class="flex">
                 <div class="container">
