--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/universal.css">
     <link rel="stylesheet" href="./css/contact.css ">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <main>
